# floater

./: Cargo.toml  README.md
src/: geometry.rs  lib.rs  middleware.rs  modifiers.rs  overflow.rs  padding.rs  space.rs  vec2.rs  web.rs
src/geometry/: rect.rs  side.rs  size.rs  vec2.rs
src/modifiers/: arrow.rs  flip.rs  offset.rs  resize.rs  shift.rs
webtest/: Cargo.toml  index.html
webtest/src/: main.rs
webtest/style/: main.scss
