[package]
name = "floater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.web-sys]
version = "0.3"
optional = true
features = ["DomRect", "CssStyleDeclaration", "HtmlElement", "Element"]

[features]
web-utils = ["dep:web-sys"]

[workspace]
members = ["webtest"]
