[package]
name = "webtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.4", features = ["nightly", "csr"] }
leptos-mview = "0.2.1"
floater = { path = "..", features = ["web-utils"] }
web-sys = { version = "0.3", features = ["DomRect", "CssStyleDeclaration"] }
leptos-use = { version = "0.9.0" }
console_error_panic_hook = "0.1"
